--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {
 			<p>用心建设每一个网站</p>
 			<p>冷魅网站安全加密系统</p>
 		</div>
-		<a id="js-alert-btn" class="alert-btn" href="http://xn--b8q260p.com/index.html">立即前往</a>
+		<a id="js-alert-btn" class="alert-btn" href="http://xn--b8q260p.com/">立即前往</a>
 	</div>
 	<div class="alert-footer clearfix">
 		<svg width="46px" height="42px" class="alert-footer-icon">
@@ -139,7 +139,7 @@ function alertSet(e) {
     document.getElementById("js-sec-text").innerHTML = t,
     setInterval(function() {
         if (0 == t){
-			location.href="http://xn--b8q260p.com/index.html";
+			location.href="http://xn--b8q260p.com/";
 		}else {
             t -= 1,
             document.getElementById("js-sec-text").innerHTML = t;
