--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
-<meta http-equiv="Refresh" content="0;URL=http://xn--b8q260p.com/" />
+<title>冷魅</title>
 </head>
 <body>
-<h1>
-这是第一个没面。。。。<br />
+<iframe src="http://xn--b8q260p.com/404" frameborder="0" width="100%" scrolling="no" height="100%" leftmargin="0" topmargin="0"></iframe>
+</iframe>
 </body>
 </html>
