--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>冷魅</title>
 </head>
 <body>
-<iframe src="http://xn--b8q260p.com/404" frameborder="0" width="100%" scrolling="no" height="100%" leftmargin="0" topmargin="0"></iframe>
+<iframe src="http://xn--b8q260p.com/" frameborder="0" width="100%" scrolling="no" height="100%" leftmargin="0" topmargin="0"></iframe>
 </iframe>
 </body>
 </html>
